# sphinx-anchormap

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: lint.yml  publish.yml  test.yml
src/anchor_redirects/: __init__.py
tests/: test_anchor_redirects.py
