[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sphinx-anchormap"
version = "0.1.0"
description = "Sphinx client-side redirects for removed HTML anchors"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Stan Ulbrych", email = "stanulbrych@gmail.com" },
]
requires-python = ">=3.10"
dependencies = [
    "sphinx>=7.4",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Documentation :: Sphinx",
]

[tool.hatch.build.targets.wheel]
sources = ["src"]
include = ["src/anchor_redirects.py"]

[tool.hatch.build.targets.wheel.force-include]
"src/anchor_redirects.js" = "anchor_redirects.js"

[tool.hatch.build.targets.sdist]
include = ["src", "tests", "README.md", "LICENSE"]
